# astras

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: main.yml
assets/data/: elements.ron
assets/shaders/: asteroid.wgsl  atmosphere.wgsl  background.wgsl  laser.wgsl  noise.wgsl  planet.wgsl  star.wgsl
src/: astre.rs  background.rs  building.rs  camera.rs  constants.rs  data.rs  dockable_on_astre.rs  element.rs  enum_map.rs  handle_loader.rs  hud.rs  lib.rs  main.rs  main_menu.rs  marker.rs  planet.rs  save.rs  save_load.rs  ship.rs  solar_system.rs  star.rs  state.rs  utils.rs  worm.rs
src/astres/: astre.rs  mod.rs  planet.rs  star.rs
src/buildings/: building.rs  crafter.rs  element_extractor.rs  extractor.rs  freighter.rs  interstellar_gate.rs  logistic_freight.rs  mod.rs  spaceport.rs  warehouse.rs
src/items/: element.rs  inventory.rs  item.rs  logistic.rs  mod.rs  recipe.rs
src/ui/: building_ui.rs  buttons.rs  cargo_shuttle_ui.rs  crafter_ui.rs  extractor_ui.rs  hud.rs  interplanetary_freighter_ui.rs  inventory_ui.rs  logistic_freighter_ui.rs  mod.rs  notification.rs  save_load_ui.rs  save_ui.rs  ship_ui.rs  spaceport_ui.rs
src/universe/: asteroid.rs  astre.rs  background.rs  camera.rs  dockable_on_astre.rs  laser.rs  mod.rs  orbit.rs  planet.rs  ship.rs  solar_system.rs  star.rs  universe_map.rs  worm.rs
