[package]
name = "astras"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
rand = "0.8.5"
phf = { version = "0.11", features = ["macros"] }
bevy_mod_picking = "0.20"
uuid = "1.11.0"

[features]
dev = ["bevy/dynamic_linking", "bevy/file_watcher"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
wildcard_imports = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
type_complexity = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
needless_pass_by_value = "allow"
